@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b8593e4156c20bf7f0642851114ea767149cb5ad ChangeLog
+SHA1 b33a8ce372c0b909ddf792cdf7d4b313ed256526 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 924eb90e12af91a811747842aa5f3f2e5a4e715f META.yml
+SHA1 41667d7b0e954aabddcee436fb24e1186ae09adc META.yml
 SHA1 ff35cf1af379307cd2088cf801dcfd3c24c09149 MYMETA.json
 SHA1 1d86d4d631ba1c900fca87906e324e2c894e05d7 MYMETA.yml
-SHA1 26bb5b75ee3607731f9ef614701a20e480e6de00 Makefile.PL
+SHA1 187c91aa3ae4a80776b0f9d76b1785d9613d0c24 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 376603f1de980f2dd4980deb7bb18f97a9d653db lib/Net/FullAuto.pm
+SHA1 76349686144ef021670813bf0bfbfe6ea5ffede8 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,13 +48,13 @@ SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 532a954b8f2f3183851b3381bef60d7d70fa0541 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 46be02d447c51a3f1a6566868e3bc7a5c82e0bf8 lib/Net/FullAuto/FA_Core.pm
+SHA1 49cd4a9295576228baacb9490f8a1ceb0f391e1d lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAk9ZJu8ACgkQJM3IZYB6aOpNkACePbQGZ7LEhALC7wSe++gU5pi3
-YqEAn0hHsMCBpcwTezSva0Rd3jYQb8TH
-=2a5R
+iEYEARECAAYFAk9d/qwACgkQJM3IZYB6aOpW0wCfXRCKtdGXogfiq9/BuAcwNrKu
+GOAAnROz9liL0KUMG5JuF/Ur1W3HpKZO
+=NJpo
 -----END PGP SIGNATURE-----
