@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9999';
+our $VERSION='0.999902';
 
 
 use 5.005;
